# RAG_chatbot

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
RAG_chatbot_frontend/: .dockerignore  Dockerfile  audit.json  audit.txt  components.json.bak  next.config.ts  osv.json  package-lock.json  package.json  skills-lock.json  tailwind.config.ts
RAG_chatbot_frontend/src/app/: globals.css  layout.tsx  page.tsx
RAG_chatbot_frontend/src/lib/: api.ts  auth.ts  (+4 more)
rag_chatbot_backend/: .dockerignore  .env  .env.docker  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
rag_chatbot_backend/.cursor/rules/: coding-conventions.mdc  project-overview.mdc
rag_chatbot_backend/alembic/: env.py
rag_chatbot_backend/alembic/versions/: 20260407_000001_initial.py  20260408_000002_remove_created_by.py  20260411_000003_add_users_auth.py  20260411_000004_add_token_version.py
rag_chatbot_backend/app/: auth.py  config.py  database.py  dependencies.py  main.py
rag_chatbot_backend/app/api/v1/: auth.py  conversations.py  documents.py  knowledge_bases.py  messages.py  router.py  stats.py  users.py
rag_chatbot_backend/app/models/: __init__.py  conversation.py  knowledge_base.py  user.py
rag_chatbot_backend/app/schemas/: __init__.py  conversation.py  document.py  knowledge_base.py  message.py  stats.py  user.py
rag_chatbot_backend/app/services/: chat_service.py  document_service.py  knowledge_base_service.py  rag_service.py
rag_chatbot_backend/app/workers/: document_processor.py
rag_chatbot_backend/scripts/: smoke_test.py
(+14 files in other folders)
